src/test/ui/issues/issue-26812.stderr
error[E0128]: generic parameters with a default cannot use forward declared identifiers
  --> $DIR/issue-26812.rs:3:10
   |
LL | fn avg<T=T::Item>(_: T) {}
   |          ^^^^^^^ defaulted generic parameters cannot be forward declared

error: aborting due to previous error

For more information about this error, try `rustc --explain E0128`.
